More fixes on invisible text

--- a/CVS-clone/style.less
+++ b/CVS-clone/style.less
@@ -22,10 +22,13 @@ body {
 body {
 	font-family: "Roboto", sans-serif;
   overflow: none;
+  display: flex;
+  flex-direction: column;
 
   .content {
     width: 90%;
     margin: 0 auto;
+    flex: 1 0 auto;
   }
 }
 
@@ -90,6 +93,7 @@ header {
 /* GRID */
 
 .grid-container {
+  height: fit-content;
   margin-top: 30px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -113,6 +117,36 @@ header {
       align-self: flex-end;
     }
   }
+}
 
-  
+/* FOOTER */
+
+footer {
+  background-color: #f4f4f4;
+  margin: 0 auto;
+  padding: 10px 0;
+  width: 90%;
+  display: flex;
+  flex-shrink: 0;
+
+  ul {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    list-style: none;
+
+    li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: transform 300ms;
+      &:hover {
+        transform: scale(1.2);
+      }
+
+    }
+  }
+
 }
